fixed issue - certain antimony files caused the section to overflow

--- a/src/UI/app/globals.css
+++ b/src/UI/app/globals.css
@@ -99,6 +99,11 @@ body {
   overflow: hidden;
 }
 
+pre {
+  scrollbar-color: #999999 #3333332d;
+  scrollbar-width: thin;
+}
+
 #search_input {
   width: fit-content;
   color: black;
